--- a/gr-droneid/grc/droneid_trig_save.block.yml
+++ b/gr-droneid/grc/droneid_trig_save.block.yml
@@ -1,33 +1,37 @@
 id: droneid_trig_save
-label: Triggered save
+label: Trigger
 category: '[Droneid]'
 templates:
   imports: from gnuradio import droneid
-  make: droneid.trig_save(${chunk_size}, ${threshold}, ${filename})
+  make: droneid.trig_save(${threshold}, ${chunk_size})
   callbacks:
   - set_threshold(${threshold})
 parameters:
-- id: chunk_size
-  label: Chunk size
-  dtype: int
-  default: 1024
 - id: threshold
   label: Threshold
   dtype: float
   default: 1.0
-- id: filename
-  label: Filename
-  dtype: string
-  default: "samples.fc32"
+- id: chunk_size
+  label: Chunk size
+  dtype: int
+  default: 20000
 inputs:
 - label: in
   domain: stream
   dtype: complex
   vlen: 1
-- label: trigger
+- label: t1
   domain: stream
   dtype: float
   vlen: 1
+- label: t2
+  domain: stream
+  dtype: float
+  vlen: 1    
+outputs:
+- domain: message
+  id: pdu
+  optional: true
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
 file_format: 1
