--- a/gr-droneid/include/gnuradio/droneid/CMakeLists.txt
+++ b/gr-droneid/include/gnuradio/droneid/CMakeLists.txt
@@ -11,5 +11,6 @@
 ########################################################################
 install(FILES
     api.h
-    trig_save.h DESTINATION include/gnuradio/droneid
+    trig_save.h 
+    DESTINATION include/gnuradio/droneid
 )
