--- a/gr-droneid/grc/CMakeLists.txt
+++ b/gr-droneid/grc/CMakeLists.txt
@@ -7,5 +7,5 @@
 #
 
 install(FILES
-    droneid_trig_save.block.yml DESTINATION share/gnuradio/grc/blocks
+    droneid_trigger.block.yml DESTINATION share/gnuradio/grc/blocks
 )
