--- a/gr-droneid/include/gnuradio/droneid/CMakeLists.txt
+++ b/gr-droneid/include/gnuradio/droneid/CMakeLists.txt
@@ -12,5 +12,6 @@
 install(FILES
     api.h
     trigger.h
-    print_msg.h DESTINATION include/gnuradio/droneid
+    print_msg.h
+    single_trigger.h DESTINATION include/gnuradio/droneid
 )
