--- a/gr-droneid/lib/CMakeLists.txt
+++ b/gr-droneid/lib/CMakeLists.txt
@@ -14,6 +14,7 @@ include(GrPlatform) #define LIB_SUFFIX
 list(APPEND droneid_sources
     trigger_impl.cc
     print_msg_impl.cc
+    single_trigger_impl.cc
 )
 
 set(droneid_sources "${droneid_sources}" PARENT_SCOPE)
