--- a/gr-droneid/grc/CMakeLists.txt
+++ b/gr-droneid/grc/CMakeLists.txt
@@ -7,7 +7,7 @@
 #
 
 install(FILES
-    droneid_trigger.block.yml
+    droneid_dual_trigger.block.yml
     droneid_print_msg.block.yml
     droneid_single_trigger.block.yml DESTINATION share/gnuradio/grc/blocks
 )
