new block: save_msg

--- a/gr-droneid/CMakeLists.txt
+++ b/gr-droneid/CMakeLists.txt
@@ -51,6 +51,7 @@ include(GrMinReq)
 ########################################################################
 
 include(GrCompilerSettings)
+message(STATUS "Cmake build type: ${CMAKE_BUILD_TYPE}")
 
 ########################################################################
 # Install directories
