--- a/gr-droneid/grc/droneid_single_trigger.block.yml
+++ b/gr-droneid/grc/droneid_single_trigger.block.yml
@@ -1,21 +1,22 @@
 id: droneid_single_trigger
 label: Single trigger
-flags: [ python, cpp ]
+flags: [ python ]
 category: '[Droneid]'
 templates:
   imports: from gnuradio import droneid
-  make: droneid.single_trigger(${threshold}, ${chunk_size})
+  make: droneid.single_trigger(${fc}, ${threshold}, ${chunk_size})
   callbacks:
   - set_threshold(${threshold})
-cpp_templates:
-    includes: ['#include <gnuradio/droneid/single_trigger.h>']
-    declarations: 'droneid::single_trigger::sptr ${id};'
-    make: 'this->${id} = droneid::single_trigger::make();'  
+  - set_fc(${fc})
 parameters:
 - id: threshold
   label: Threshold
   dtype: float
   default: 1.0
+- id: fc
+  label: Fc
+  dtype: float
+  default: 2414.5
 - id: chunk_size
   label: Chunk size
   dtype: int
