--- a/gr-droneid/grc/CMakeLists.txt
+++ b/gr-droneid/grc/CMakeLists.txt
@@ -11,5 +11,6 @@ install(FILES
     droneid_print_msg.block.yml
     droneid_single_trigger.block.yml
     droneid_msg_trigger.block.yml
-    droneid_save_msg.block.yml DESTINATION share/gnuradio/grc/blocks
+    droneid_save_msg.block.yml
+    droneid_bladerf_lb.block.yml DESTINATION share/gnuradio/grc/blocks
 )
