Change to complex output

--- a/gr-droneid/grc/droneid_bladerf_lb.block.yml
+++ b/gr-droneid/grc/droneid_bladerf_lb.block.yml
@@ -12,7 +12,7 @@ parameters:
 outputs:
 - label: out
   domain: stream
-  dtype: int
+  dtype: complex
   multiplicity: 1
 - id: error
   domain: message
