add crcmod as dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "pyxcoder"
 version = "0.0.1"
 dependencies = [
     'importlib-metadata; python_version<"3.8"',
+    'crcmod'
 ]
 
 [tool.setuptools]
